# hexspace

./: .gitignore  LICENSE.md  README.md  flake.nix  hexspace.cabal
src/Data/: HexSpace.hs
src/Data/HexSpace/: Coordinates.hs  Grid.hs  Internal.hs  Line.hs
src/Graphics/HexSpace/: Gloss.hs
test/: Main.hs
test/Data/: HexSpaceSpec.hs
